<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#303030"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/playOnlineButton"
        android:layout_width="230dp"
        android:layout_height="66dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/orange_tint"
        android:text="@string/play_online"
        app:layout_constraintBottom_toTopOf="@+id/playLocalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playLocalButton"
        android:layout_width="230dp"
        android:layout_height="66dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/orange_tint"
        android:text="@string/play_local"
        app:layout_constraintBottom_toTopOf="@+id/DailyPuzzleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/DailyPuzzleButton"
        android:layout_width="230dp"
        android:layout_height="66dp"
        android:layout_marginBottom="228dp"
        android:backgroundTint="@color/orange_tint"
        android:text="@string/daily_puzzle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playOnlineButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>